--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,36 @@ dependencies = [
     "torchtyping>=0.1.5",
     "torchview>=0.2.7",
 ]
+
+[dependency-groups]
+dev = [
+    "ruff>=0.14.13",
+]
+
+[tool.ruff]
+line-length = 88
+target-version = "py311"
+
+# Files to include/exclude
+exclude = [
+    ".venv",
+    "__pycache__",
+    "build",
+    "dist",
+]
+
+[tool.ruff.lint]
+select = [
+    "E",   # pycodestyle errors
+    "F",   # pyflakes
+    "I",   # isort
+    "B",   # flake8-bugbear
+    "UP",  # pyupgrade
+]
+ignore = [
+    "E203", # whitespace before ':', conflicts with Black
+]
+
+[tool.ruff.format]
+quote-style = "double"
+indent-style = "space"
